# zabbix-tools

./: .gitignore  Cargo.toml  README.md  config.json
cfg/: config.json  hosts.csv
crates/zabbix_api/: Cargo.toml  README.md
crates/zabbix_api/src/: api.rs  lib.rs  models.rs
src/: json.rs  main.rs
