[package]
name = "zbx-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = ["full"] }
csv = "1.2.2"
zabbix_api = { path = "./crates/zabbix_api"}
serde_json = "1.0.105"
serde = { version = "1.0.185", features = ["derive"] }