[package]
name = "zabbix_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json", "default-tls"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"